feat: Menu tabs      - Add Menu tabs using Menu Semantic tag and ListItem Components with Buttons

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,19 @@ main h2 {
   flex-wrap: wrap;
   justify-content: center;
 }
+
+#examples {
+  margin: 3rem auto;
+}
+
+#examples h2 {
+  text-align: left;
+}
+
+#examples menu {
+  margin: 1rem 0;
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+  list-style: none;
+}
